# drop-site

./: middleware.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/api/login/: route.ts
app/api/urls/[id]/: route.ts
app/login/: page.tsx
backend/: .env  db.js  main.py  package-lock.json  package.json  pyproject.toml  server.js
components/: collection-selector.tsx  thumbnail-viewer.tsx  url-actions.tsx
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts  running.py
frontend/app/: page.tsx
frontend/app/api/b2/image/: route.ts
frontend/app/api/login/: route.ts
frontend/app/api/logout/: route.ts
frontend/app/api/urls/: route.ts
frontend/app/api/urls/[id]/: route.ts
frontend/app/api/urls/extract/: route.ts
frontend/app/login/: page.tsx
frontend/components/: collection-selector.tsx  pagination-controls.tsx  thumbnail-viewer.tsx  url-actions.tsx
frontend/lib/: utils.ts
